--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,41 @@
         </configuration>
       </plugin>
       <plugin>
+        <!-- https://joelittlejohn.github.io/jsonschema2pojo/site/1.0.0/generate-mojo.html -->
+        <groupId>org.jsonschema2pojo</groupId>
+        <artifactId>jsonschema2pojo-maven-plugin</artifactId>
+        <version>1.1.2</version>
+        <configuration>
+          <generateBuilders>true</generateBuilders>
+          <!-- must also include "setter" methods for BeanUtils.copyProperties() -->
+          <includeSetters>true</includeSetters>
+          <includeJsr303Annotations>true</includeJsr303Annotations>
+          <includeHashcodeAndEquals>false</includeHashcodeAndEquals>
+          <includeToString>true</includeToString>
+          <useLongIntegers>true</useLongIntegers>
+          <dateType>java.time.OffsetDateTime</dateType>
+          <includeAdditionalProperties>false</includeAdditionalProperties>
+        </configuration>
+        <executions>
+          <execution>
+            <id>generate-amqp-api-model</id>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <phase>generate-sources</phase>
+            <configuration>
+              <dateTimeType>java.time.OffsetDateTime</dateTimeType>
+              <dateType>java.time.LocalDate</dateType>
+              <sourceDirectory>${project.basedir}/src/main/resources/json-schema</sourceDirectory>
+              <outputDirectory>${project.build.directory}/generated-sources/jsonschema2pojo
+              </outputDirectory>
+              <targetPackage>${project.groupId}.rabbitexample.amqp.ui.model</targetPackage>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
         <groupId>org.openapitools</groupId>
         <artifactId>openapi-generator-maven-plugin</artifactId>
         <version>6.0.1</version>
